--- a/main.css
+++ b/main.css
@@ -1,4 +1,8 @@
+body{
+  font-family: "Courier New", Courier, monospace;
+}
 h1 {
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #924286;
   color: #ffffff;
 }
