--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 body{
-  font-family: "Courier New", Courier, monospace;
+  font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Impact, Charcoal, sans-serif;
   background-color: #924286;
   color: #ffffff;
 }
