--- a/main.css
+++ b/main.css
@@ -1,8 +1,28 @@
 body{
-  font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-  font-family: Impact, Charcoal, sans-serif;
-  background-color: #924286;
+  font-family: "Arial Black", Gadget, sans-serif;
   color: #ffffff;
+}
+#header {
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #924286;
+}
+#content {
+    width: 75%;
+    margin-top: 25px;
+    margin-left: auto;
+    margin-right: auto;
+}
+a {
+    color: #426493;
+}
+.color {
+    font-weight: bold;
+    color: #426493;
 }
